--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.0",
+    "cypress": "^12.17.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0",
@@ -80,6 +81,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/styled-components": "^5.1.23",
+    "cypress-xpath": "^2.0.1",
     "firebase-tools": "^10.2.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.10",
